cyberstar2015-salesforce/src/objects/etcd8_LeadRecipient__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>user__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>user__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>user__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nextUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>openLeads__c</fullName>
        <label>Open Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Recipient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>available__c</columns>
        <columns>nextUp__c</columns>
        <columns>openLeads__c</columns>
        <columns>user__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR-{00000}</displayFormat>
        <label>LeadRecipient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>